--- a/md1/1/index.html
+++ b/md1/1/index.html
@@ -10,7 +10,15 @@
 
 <body>
     <script>
-         
+         function RetornaEndereco() {
+            var endereco = {
+                rua: "Rua dos pinheiros",
+                numero: 1293,
+                bairro: "Centro",
+                cidade: "São Paulo",
+                uf: "SP"
+            };
+        }
     </script>
 </body>
 
