--- a/md1/1/index.html
+++ b/md1/1/index.html
@@ -18,7 +18,14 @@
                 cidade: "São Paulo",
                 uf: "SP"
             };
+            
+            resultado = "O usuário mora em " + endereco.cidade + "/" + endereco.uf + ", no bairro " + endereco.bairro + ", na rua " + endereco.rua + "com nº " + endereco.numero + ".";
+            
+            return resultado 
+
         }
+        console.log(RetornaEndereco())
+
     </script>
 </body>
 
