Criando a Variável e Mostrando Resultado

--- a/md1/5/index.html
+++ b/md1/5/index.html
@@ -20,6 +20,20 @@
                 );
             }
         }
+
+        var usuarios = [
+            {
+                nome: "Diego",
+                habilidades: ["Javascript", "ReactJS", "Redux"]
+            },
+            {
+                nome: "Gabriel",
+                habilidades: ["VueJS", "Ruby on Rails", "Elixir"]
+            }
+        ];
+
+        exibeHabilidades(usuarios);
+        
     </script>
 </body>
 
