--- a/md2/2/index.html
+++ b/md2/2/index.html
@@ -10,9 +10,18 @@
 
 <body>
     <script>
-        
+
         var Btn = document.getElementById("botao");
         var Esp = document.getElementById("espaco");
+        
+        function getRandomColor() {
+            var letters = "0123456789ABCDEF";
+            var color = "#";
+            for (var i = 0; i < 6; i++) {
+                color += letters[Math.floor(Math.random() * 16)];
+            }
+            return color;
+        }
     </script>
 </body>
 
