Finalizando a Função e a Variavel

--- a/md2/2/index.html
+++ b/md2/2/index.html
@@ -13,7 +13,7 @@
 
         var Btn = document.getElementById("botao");
         var Esp = document.getElementById("espaco");
-        
+
         function getRandomColor() {
             var letters = "0123456789ABCDEF";
             var color = "#";
@@ -22,6 +22,22 @@
             }
             return color;
         }
+        
+        Btn.onclick = function () {
+            var EspE = document.createElement("div");
+            EspE.style.width = "100px";
+            EspE.style.height = "100px";
+            EspE.style.backgroundColor = "#F00";
+            EspE.style.borderColor = "##000000";
+            EspE.style.borderStyle = "solid";
+            EspE.style.borderBottomWidth = "0.5px";
+            Esp.appendChild(EspE);
+            EspE.onmouseover = function () {
+                EspE.style.backgroundColor = getRandomColor();
+            }
+            Esp.appendChild(EspE);
+        };
+
     </script>
 </body>
 
