--- a/md2/3/index.html
+++ b/md2/3/index.html
@@ -9,10 +9,22 @@
 </head>
 
 <body>
+
+    <ul></ul> 
+
     <script>
-        
+
         var nomes = ['Diego', 'Gabriel', 'Lucas'];
         var listE = document.querySelector('ul');
+
+        for (nome of nomes) {
+            
+            var liE = document.createElement('li');
+            var textE = document.createTextNode(nome);
+            liE.appendChild(textE);
+            listE.appendChild(liE);
+        }
+
     </script>
 </body>
 
