--- a/md2/4/index.html
+++ b/md2/4/index.html
@@ -9,12 +9,30 @@
 </head>
 
 <body>
+    <ul></ul>
+    <input type="text" name="nome">
+    <button onclick="adicionar()">Adicionar</button>
+
     <script>
-        
+
         var nomes = ['Diego', 'Gabriel', 'Lucas'];
         var listE = document.querySelector('ul');
         var inputE = document.querySelector('input');
 
+        function addItem(text) {
+
+            var liE = document.createElement('li');
+            var textE = document.createTextNode(text);
+            liE.appendChild(textE);
+            listE.appendChild(liE);
+        }
+
+        function adicionar() {
+
+            addItem(inputE.value);
+            inputE.value = "";
+        }
+        
     </script>
 </body>
 
