Criando for e Finalizando

--- a/md2/4/index.html
+++ b/md2/4/index.html
@@ -32,7 +32,12 @@
             addItem(inputE.value);
             inputE.value = "";
         }
-        
+
+        for (nome of nomes) {
+            
+            addItem(nome);
+        }
+
     </script>
 </body>
 
